--- a/data4good/index.html
+++ b/data4good/index.html
@@ -24,20 +24,21 @@
       class="font-sans bg-white text-center flex justify-between py-4 overflow-hidden px-4 w-screen border-b"
     >
       <span class="flex items-center">
-        <a href="" class="block text-left" target="_blank">
-          <img
-            src="./img/logo2.png"
-            class="h-8 sm:h-8 rounded-full"
-            alt="logo"
-          />
-        </a>
-        &nbsp;
-        <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-          data4good
-        </b>
-        <span class="text-lg flex text-left" style="font-size: 1rem;">
-          &nbsp; Vienna</span
+        <a
+          href="./index.html"
+          class="inline-block text-left flex items-center"
+          style="text-decoration: none; color:black"
         >
+          <img src="./img/logo2.png" class="h-8 sm:h-8" alt="logo" />
+          &nbsp;
+          <b class="text-lg" style="font-size: 1.35rem;">
+            data4good
+          </b>
+        </a>
+
+        <span class="text-lg flex text-left" style="font-size: 1rem;">
+          &nbsp; Vienna
+        </span>
       </span>
 
       <div class="text-sm lg:flex md:flex hidden">
@@ -63,6 +64,13 @@
               href="#about"
               class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
               >About us</a
+            >
+          </li>
+          <li class="pr-2">
+            <a
+              href="./photos.html"
+              class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
+              >Photos 📸</a
             >
           </li>
         </ul>
