--- a/data4good/photos.html
+++ b/data4good/photos.html
@@ -96,7 +96,7 @@
     >
       <div class="w-full lg:w-1/2">
         <img
-          src="media/DSC_0248.JPG"
+          src="./media/DSC_0248.JPG"
           alt=""
           class="rounded-lg shadow hover:shadow-raised"
         />
