--- a/data4good/photos.html
+++ b/data4good/photos.html
@@ -304,7 +304,7 @@
           >
             <img
               class="w-full"
-              src="./media/IMG_20190427_171242.JPG"
+              src="./media/IMG_20190427_171242.jpg"
               alt="Sunset in the mountains"
             />
           </div>
