--- a/data4good/photos.html
+++ b/data4good/photos.html
@@ -47,7 +47,7 @@
         >
           <li>
             <a
-              href="/index.html"
+              href="./index.html"
               class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
               >Home</a
             >
@@ -79,7 +79,7 @@
       <ul class="text-sm text-grey-dark flex list-reset items-center flex-col">
         <li>
           <a
-            href="/index.html"
+            href="./index.html"
             class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
             >Home</a
           >
@@ -110,7 +110,14 @@
         >
           Saturday 27th April 2019
         </label>
-        <h1 class="my-4 font-normal">A great start</h1>
+        <p class="leading-normal mb-4 text-grey-dark">
+          What do you get if you fill a room with people who enjoy learning, are
+          passionate about data science, and want to contribute to the world's
+          social and environmental challenges?
+        </p>
+        <h1 class="my-4 font-normal">
+          A great start to Vienna's first data4good Hackathon!
+        </h1>
       </div>
     </section>
 
