--- a/data4good/photos.html
+++ b/data4good/photos.html
@@ -110,7 +110,8 @@
         >
           Saturday 27th April 2019
         </label>
-        <p class="leading-normal mb-4 text-grey-dark">
+        <p class="leading-normal mb-4">
+          <br />
           What do you get if you fill a room with people who enjoy learning, are
           passionate about data science, and want to contribute to the world's
           social and environmental challenges?
