--- a/data4good/photos.html
+++ b/data4good/photos.html
@@ -92,7 +92,7 @@
 
     <section
       style="margin-top: 80px"
-      class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
+      class="my-8 p-4 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
     >
       <div class="w-full lg:w-1/2">
         <img
