--- a/data4good/index.html
+++ b/data4good/index.html
@@ -92,7 +92,7 @@
     <div
       id="navMenu"
       class="text-sm w-full lg:hide md:hide hidden border-b"
-      style="position:fixed; background: white; z-index: 1000; top:66px"
+      style="position:fixed; background: white; z-index: 1000; top:64px"
     >
       <ul class="text-sm text-grey-dark flex list-reset items-center flex-col">
         <li>
@@ -114,6 +114,13 @@
             href="#about"
             class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
             >About us</a
+          >
+        </li>
+        <li class="pr-2">
+          <a
+            href="./photos.html"
+            class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
+            >Photos 📸</a
           >
         </li>
         <li class="pr-2">
