added challenge details

--- a/data4good/index.html
+++ b/data4good/index.html
@@ -311,13 +311,14 @@
           the geographical distribution of urban greening projects, as well as
           the development of topics over time.
         </p>
-        <!-- 
-        <button
+
+        <a
+          style="text-decoration: none"
+          href="./challenge1.html"
           class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent"
         >
           Learn More
-        </button>
-        -->
+        </a>
       </div>
     </section>
 
@@ -356,13 +357,14 @@
           on the ground efforts. Due to the nature of the catastrophe, this will
           be an open-ended challenge without a predefined outcome.
         </p>
-        <!-- 
-        <button
+
+        <a
+          href="./challenge2.html"
+          style="text-decoration: none"
           class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent"
         >
           Learn More
-        </button>
-        -->
+        </a>
       </div>
       <div class="w-full lg:w-1/2" data-aos="fade-up">
         <img src="./img/2.png" alt="" />
@@ -402,13 +404,14 @@
           data4good Hackathon project will examine historical cases, in order to
           help improve patient to care-provider matching.
         </p>
-        <!-- 
-        <button
+
+        <a
+          href="./challenge3.html"
+          style="text-decoration: none"
           class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent"
         >
           Learn More
-        </button>
-        -->
+        </a>
       </div>
     </section>
 
@@ -443,13 +446,14 @@
           further developments of the actual platform in a build-measure-learn
           cycle.
         </p>
-        <!--
-        <button
+
+        <a
+          href="./challenge4.html"
+          style="text-decoration: none"
           class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent"
         >
           Learn More
-        </button>
-        -->
+        </a>
       </div>
       <div class="w-full lg:w-1/2" data-aos="fade-up">
         <img src="./img/4.png" alt="" />
