--- a/data4good/challenge2.html
+++ b/data4good/challenge2.html
@@ -135,7 +135,7 @@
         <img src="./img/2.png" alt="" />
       </div>
     </section>
-
+<!-- Method -->
     <section
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center"
   >
@@ -163,6 +163,38 @@
     </div>
     
   </section>
+
+  <section class="bg-white py-4 font-sans">
+      <div
+        class="container max-w-xl m-auto flex flex-wrap items-center justify-around"
+      >
+        <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+          <div
+            class="overflow-hidden bg-white hover:translateY-2px transition"
+          >
+            <img
+              class="w-full rounded-lg"
+              src="./media/ch2-1.jpg"
+              alt="Sunset in the mountains"
+            />
+          </div>
+        </div>
+
+        <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+          <div
+            class="overflow-hidden bg-white hover:translateY-2px transition"
+          >
+            <img
+              class="w-full rounded-lg"
+              src="./media/ch2-2.jpg"
+              alt="Sunset in the mountains"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+  <!-- Results-->
     <section
       class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6"
     >
@@ -176,6 +208,14 @@
       </p>
      
     </section>
+
+    <!-- Download the presentation-->
+    <section class="font-sans text-center my-8 px-8">
+        <h3 class="capitalize font-medium">Download the result presentation</h3>
+        <br>
+        <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Download PDF</button>
+    </section>
+
     <footer id="about" class="font-sans bg-white py-8 px-4">
       <div
         class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left"
