--- a/data4good/challenge4.html
+++ b/data4good/challenge4.html
@@ -209,7 +209,7 @@
 
     <!-- Download the presentation-->
     <section class="font-sans text-center my-8 px-8">
-        <h3 class="capitalize font-medium">Download the result presentation</h3>
+        <h3 class="font-medium">Download the results presentation</h3>
         <br>
         <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Download PDF</button>
     </section>
@@ -283,8 +283,7 @@
         ©2019 Vienna Data Science Group. All rights reserved. Webdesign &
         development
         <a href="https://trendydots.com/me/" target="_blank">
-          Cristian-Dan Bara</a
-        >
+          Cristian-Dan Bara </a>
       </div>
     </footer>
 
