--- a/data4good/index.html
+++ b/data4good/index.html
@@ -529,8 +529,8 @@
         ©2019 Vienna Data Science Group. All rights reserved. Webdesign &
         development
         <a href="https://trendydots.com/me/" target="_blank">
-          Cristian-Dan Bara</a
-        >
+          Cristian-Dan Bara
+        </a>
       </div>
     </footer>
 
