--- a/data4good/challenge1.html
+++ b/data4good/challenge1.html
@@ -172,7 +172,7 @@
       <div
         class="container max-w-xl m-auto flex flex-wrap items-center justify-around"
       >
-        <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div class="w-full md:w-1/3 lg:w-1/3 flex flex-col mb-8 px-3">
           <div
             class="overflow-hidden bg-white hover:translateY-2px transition"
           >
@@ -183,8 +183,19 @@
             />
           </div>
         </div>
+        <div class="w-full md:w-1/3 lg:w-1/3 flex flex-col mb-8 px-3">
+          <div
+            class="overflow-hidden bg-white hover:translateY-2px transition"
+          >
+            <img
+              class="w-full rounded-lg"
+              src="./media/ch1-3.jpg"
+              alt="Sunset in the mountains"
+            />
+          </div>
+        </div>
 
-        <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
+        <div class="w-full md:w-1/3 lg:w-1/3 flex flex-col mb-8 px-3">
           <div
             class="overflow-hidden bg-white hover:translateY-2px transition"
           >
@@ -211,22 +222,22 @@
       <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
           The following map represents the number of times that countries are mentioned in the texts from the Grünstattgrau. Note that the countries mentioned are not only specific to buildings with green roof tops. That distinction in the analysis has to be better worked out.
       </p>
-     <iframe src="./misc/ch1-map-result.html" style="min-height: 450px" class="m-8"></iframe>
+     <iframe src="./misc/ch1-map-result.html" style="min-height: 450px" class="lg:m-8 md:m-8"></iframe>
      <br>
      <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
      Due to the higher number of mentions in Germany, we created a separate map with data describing cities.
     </p>
      <br>
-     <iframe src="./misc/ch1-germany-result.html" style="min-height: 450px" class="m-8"></iframe>
+     <iframe src="./misc/ch1-germany-result.html" style="min-height: 450px" class="lg:m-8 md:m-8"></iframe>
     </section>
 
     <!-- Download the presentation-->
     <section class="font-sans text-center my-8 px-8">
-        <h3 class="capitalize font-medium">Download the result presentation</h3>
+        <h3 class="font-medium">Download the results presentation</h3>
         <br>
-        <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Download PDF</button>
+        <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide" style="text-decoration: none;" href="./misc/ch1-final-results.pdf" download>Download PDF</a>
     </section>
-    
+
     <footer id="about" class="font-sans bg-white py-8 px-4">
       <div
         class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left"
@@ -296,8 +307,7 @@
         ©2019 Vienna Data Science Group. All rights reserved. Webdesign &
         development
         <a href="https://trendydots.com/me/" target="_blank">
-          Cristian-Dan Bara</a
-        >
+          Cristian-Dan Bara </a>
       </div>
     </footer>
 
