updated challenge pages

--- a/data4good/challenge3.html
+++ b/data4good/challenge3.html
@@ -204,19 +204,22 @@
         Results
       </h3>
       <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
-          We calculated sentiments for each individual case. As expected, conflict cases have a lower (unhappier) sentiment than non-conflict cases.  
+          The team calculated sentiments present in each individual case report. As expected, conflict cases have a lower (unhappier) sentiment than non-conflict cases.
+          Their analysis resulted in several insights:
+          <ul class="flex flex-col text-left">
+            <li>Both normal and conflicted cases have positive sentiments, but conflicted cases have a more negative approach</li>
+            <li>The sentiments present in the text were the most important predicted os whether a case will become conflicted or not.</li>
+            <li>The frerquency of usage for the word "nicht" is important and indicative the the classification </li> 
+            <li>Many conflicts are detected in the first 3 montsh of the case</li>
+          </ul>  
       </p>
       <img src="./misc/ch3-satisfaction-result.png" style="min-height: 450px" class="m-8">
-     
-      <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
-        The team is working hard to achieve great results. They will be presented later. Plases stay tuned
-      </p>
      
     </section>
 
     <!-- Download the presentation-->
     <section class="font-sans text-center my-8 px-8">
-        <h3 class="font-medium">Download the results presentation</h3>
+        <h3 class="font-medium">The final presentation will be available for download soon</h3>
         <br>
         <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Download PDF</button>
     </section>
