added more results to ch4 team

--- a/data4good/challenge4.html
+++ b/data4good/challenge4.html
@@ -203,6 +203,11 @@
         style="min-height: 450px"
         class="m-8"
       />
+      <img
+        src="./misc/ch4-distribution-results.jpg"
+        style="min-height: 450px"
+        class="m-8"
+      />
     </section>
 
     <!-- Download the presentation-->
