added final presentations of t3 and t4

--- a/data4good/challenge3.html
+++ b/data4good/challenge3.html
@@ -219,10 +219,10 @@
 
     <!-- Download the presentation-->
     <section class="font-sans text-center my-8 px-8">
-        <h3 class="font-medium">The final presentation will be available for download soon</h3>
+        <h3 class="font-medium">Download the results presentation</h3>
         <br>
-        <button class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide">Download PDF</button>
-    </section>
+        <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide" style="text-decoration: none;" href="./misc/ch3-final-results.pdf" download>Download PDF</a>
+      </section>
 
     <footer id="about" class="font-sans bg-white py-8 px-4">
       <div
