--- a/data4good/challenge4.html
+++ b/data4good/challenge4.html
@@ -213,14 +213,16 @@
     <!-- Download the presentation-->
     <section class="font-sans text-center my-8 px-8">
       <h3 class="font-medium">
-        The final presentation will be available for download soon
+        Download the results presentation
       </h3>
       <br />
-      <button
+      <a
         class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;"
+        href="./misc/ch4-final-results.pdf"
+        download
+        >Download PDF</a
       >
-        Download PDF
-      </button>
     </section>
 
     <footer id="about" class="font-sans bg-white py-8 px-4">
