--- a/oskar/index.html
+++ b/oskar/index.html
@@ -169,7 +169,7 @@
         <br />
       </p>
 
-      <a href="./challenge4.html" style="text-decoration: none"
+      <a href="#" style="text-decoration: none"
         class="bg-transparent hover:bg-black text-grey-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
         Learn more soon
       </a>
