--- a/oskar/index.html
+++ b/oskar/index.html
@@ -80,7 +80,7 @@
   <section id="challenges"
     class="my-8 px-4 font-serif container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
     style="margin-top:80px">
-    <div class="w-full lg:w-1/2" data-aos="fade-right">
+    <div class="w-full lg:w-1/2" data-aos="fade-in">
       <img src="./img/1.png" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
@@ -124,7 +124,7 @@
         Challenge coming soon
       </a>
     </div>
-    <div class="w-full lg:w-1/2" data-aos="fade-left">
+    <div class="w-full lg:w-1/2">
       <img src="./img/2.png" class="rounded-lg" alt="" />
     </div>
   </section>
@@ -132,7 +132,7 @@
   <!-- Challenge 2 -->
   <section
     class="px-4 my-8 font-serif container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2" data-aos="fade-right">
+    <div class="w-full lg:w-1/2">
       <img src="./img/3.png" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
@@ -174,7 +174,7 @@
         Learn more soon
       </a>
     </div>
-    <div class="w-full lg:w-1/2" data-aos="fade-left">
+    <div class="w-full lg:w-1/2">
       <img src="./img/4.png" class="rounded-lg" alt="" />
     </div>
   </section>
