removed link to /me

--- a/oskar/index.html
+++ b/oskar/index.html
@@ -214,7 +214,7 @@
         <p class="font-sans">
           The Gentleman’style experiment is developed by Cristian-Dan Bara within the frames of the <a
             href="https://trendydots.com/project">trendy dots</a> project. It aims to help build a prototype for an AI
-          model which can give basic men’s style advices. <a href="https://trendydots.com/me/">Cristian-Dan</a> is
+          model which can give basic men’s style advices. Cristian-Dan is
           a non
           conventional researcher with a great interest in web development, web design and pretty much everything web
           related. Lately he is extending his knowledge in machine learning and artificial intelligence.
