--- a/invest/project.html
+++ b/invest/project.html
@@ -152,17 +152,17 @@
             name="fieldRelation" type="text" style="height: 6em;" />
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
             style="color: black;">
-            How are you related to the banking or investment field?
+            How are you related to the standard reporting or market reserach field?
           </label>
         </div>
 
         <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
-        <input type="hidden" name="comment" value="Subscribe me to trendy dots. market research (investor news)" />
+        <input type="hidden" name="comment" value="td. market research contact" />
         <br />
         <div class="flex items-center justify-between">
           <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit"
             style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
-            Subscribe
+            Submit
           </button>
           <span style="font-size:12px">
             by submitting this information you agree to our
