added upcoming events

--- a/data4good/index.html
+++ b/data4good/index.html
@@ -86,33 +86,56 @@
     </ul>
   </div>
 
+  <!-- Title -->
   <section id="program" class="font-sans container max-w-xl mx-auto flex flex-col md:flex-row sm:items-start"
     style="margin-top:80px">
-    <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-0 md:py-8 md:px-8 lg:items-start">
+    <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-2 lg:items-start">
       <h1 class="mt-2 mb-4 font-medium">
         The first data4good Hackathon
       </h1>
-      <h3 class="mb-4">
-        When: April 27-28, 2019 <br />
-        Where: A1 Telekom Austria Group office building, Lassallestraße 9
-      </h3>
-    </div>
-    <div
-      class="w-full md:w-1/2 flex flex-col md:flex-col sm:flex-col justify-between md:justify-center items-center px-2 md:p-8 items-center md:items-start">
       <span>
         Organised by &nbsp; &nbsp;
-        <a href="https://viennadatasciencegroup.at/" target="_blank" style="text-decoration: none;">
-          <img src="./img/organizer.png" alt="" style="height: 50px" />
+        <a href="https://viennadatasciencegroup.at/" target="_blank"
+          style="text-decoration: none; display: inline-block; vertical-align: middle;">
+          <img src="./img/organizer.png" alt="" style="height: 40px" />
         </a>
       </span>
+    </div>
+    <div
+      class="w-full md:w-1/2 flex flex-col md:flex-col sm:flex-col lg:justify-between md:justify-center items-center px-2 md:px-8 items-center md:items-start sm:items-start">
+
       <span>&nbsp;</span>
       <img src="./img/twitter-hash.png" alt="" style="height: 80px" />
       <span>&nbsp;</span>
     </div>
   </section>
+  <!-- Upcoming events -->
+  <section class="mb-2 font-sans container max-w-xl mx-auto px-6 " data-aos="fade-up" style="font-size: 1.1em">
+    <br>
+    <br>
+    <h3> Upcomming events</h3> <br>
+    <p> 1) HW Int's Helmut Gaffl will present their project at the Technologieplauscherl in Linz <a
+        href="http://technologieplauscherl.at/" target="_blank">http://technologieplauscherl.at</a> </p>
+    <br>
+    <p>2) The GrünStattGrau team is presenting at the NLP Meetup <a
+        href="https://www.meetup.com/nlp-vienna/events/261452867/"
+        target="_blank">https://www.meetup.com/nlp-vienna/events/261452867/</a> </p>
+    <br>
+    <p> 3) We will present a summary of the Hackathon and results, with then a spotlight on the Smart
+      Cities Project, at
+      the WAW: <a href="https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/"
+        target="_blank">https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/</a> </p>
+    <br>
+  </section>
   <!-- About the hackathon -->
-  <section class="mb-8 font-sans container max-w-xl mx-auto flex flex-col md:flex-row sm:items-start">
+  <section class="mb-8 font-sans container max-w-xl mx-auto flex flex-col md:flex-row sm:items-start border-b">
     <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-0 md:py-8 md:px-8 lg:items-start">
+      <h3> Past events</h3><br>
+      <p class="mb-4">
+        Our first hackathon<br />
+        When: April 27-28, 2019 <br />
+        Where: A1 Telekom Austria Group office building, Lassallestraße 9
+      </p>
       <p class="leading-normal mb-4">
         In an intense, 2-day hackathon interdisciplinary teams of data
         scientists, developers and designers will work together with domain
@@ -145,26 +168,11 @@
         </li>
       </ul>
       <br />
-      <p class=" justify-center">
-        <b>Sponsored by</b> <br /><br />
-        <a href="http://contextflow.com/de/" target="_blank" style="text-decoration: none;">
-          <img src="./img/sponsor1.png" style="height: 60px" />
-        </a>
-        &nbsp;&nbsp;
-        <a href="https://www.enlite.ai/" target="_blank" style="text-decoration: none;">
-          <img src="./img/sponsor2.png" style="height: 60px" />
-        </a>
-      </p>
-      <p class=" justify-center">
-        <b>Hoste by</b> <br /><br />
-        <a href="https://www.a1.group/" target="_blank" style="text-decoration: none;">
-          <img src="./img/sponsor3.png" style="height: 120px" />
-        </a>
-      </p>
+
     </div>
     <div
       class="w-full md:w-1/2 flex flex-col md:flex-col sm:flex-col justify-between md:justify-center items-center p-2 md:p-8 items-center md:items-start">
-      <div class="flex items-center sm:border-b md:border-b md:border-r-0 p-4 md:w-auto">
+      <div class="flex items-center sm:border-b md:border-b md:border-r-0 px-2 pb-4 md:w-auto">
         <div class="">
           <h2 class="text-grey-dark font-medium">
             Saturday 27th April 2019
@@ -201,6 +209,30 @@
           </p>
         </div>
       </div>
+    </div>
+  </section>
+  <!-- Sponsors -->
+  <section class="mb-8 font-sans container max-w-xl mx-auto flex flex-col md:flex-row sm:items-start border-b">
+    <div class="w-1/2 m-auto flex flex-row items-center">
+      <b>Sponsored by </b>
+      <span> &nbsp;&nbsp;&nbsp;</span>
+      <a href="http://contextflow.com/de/" target="_blank"
+        style="text-decoration: none; vertical-align: middle; display: inline-block">
+        <img src="./img/sponsor1.png" style="height: 60px" />
+      </a>
+      <span> &nbsp;&nbsp;&nbsp;</span>
+      <a href="https://www.enlite.ai/" target="_blank"
+        style="text-decoration: none; vertical-align: middle; display: inline-block">
+        <img src="./img/sponsor2.png" style="height: 60px" />
+      </a>
+    </div>
+    <div class=" justify-center w-1/2 m-auto flex flex-row-reverse items-center">
+      <a href="https://www.a1.group/" target="_blank"
+        style="text-decoration: none; vertical-align: middle; display: inline-block">
+        <img src="./img/sponsor3.png" style="height: 100px" />
+      </a>
+      <span> &nbsp;&nbsp;&nbsp;</span>
+      <b>Hoste by</b>
     </div>
   </section>
 
