--- a/data4good/index.html
+++ b/data4good/index.html
@@ -113,7 +113,7 @@
   <section class="mb-2 font-sans container max-w-xl mx-auto px-6 " data-aos="fade-up" style="font-size: 1.1em">
     <br>
     <br>
-    <h3> Upcomming events</h3> <br>
+    <h3> Upcoming events</h3> <br>
     <p> 1) HW Int's Helmut Gaffl will present their project at the Technologieplauscherl in Linz <a
         href="http://technologieplauscherl.at/" target="_blank">http://technologieplauscherl.at</a> </p>
     <br>
