--- a/oskar/challenge1.html
+++ b/oskar/challenge1.html
@@ -64,7 +64,7 @@
   <section style="margin-top:40px"
     class="my-8 px-4 pt-8 font-serif container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2" data-aos="fade-right">
-      <img src="./img/2.png" class="rounded-lg" alt="" />
+      <img src="./img/2.jpg" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <label for="tagline" class="tracking-wide text-grey-dark font-sans flex items-center">
@@ -341,4 +341,4 @@
 
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="./js/aos.js"></script>
-  <script src="js/app.js"></script>
+  <script src="./js/challenge1.js"></script>
