--- a/oskar/index.html
+++ b/oskar/index.html
@@ -81,7 +81,7 @@
     class="my-8 px-4 font-serif container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
     style="margin-top:80px">
     <div class="w-full lg:w-1/2" data-aos="fade-in">
-      <img src="./img/1.png" class="rounded-lg" alt="" />
+      <img src="./img/1.jpg" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">
@@ -125,7 +125,7 @@
       </a>
     </div>
     <div class="w-full lg:w-1/2">
-      <img src="./img/2.png" class="rounded-lg" alt="" />
+      <img src="./img/2.jpg" class="rounded-lg" alt="" />
     </div>
   </section>
 
@@ -133,7 +133,7 @@
   <section
     class="px-4 my-8 font-serif container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2">
-      <img src="./img/3.png" class="rounded-lg" alt="" />
+      <img src="./img/3.jpg" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <label for="tagline" class="tracking-wide text-grey-dark font-sans flex items-center">
@@ -175,7 +175,7 @@
       </a>
     </div>
     <div class="w-full lg:w-1/2">
-      <img src="./img/4.png" class="rounded-lg" alt="" />
+      <img src="./img/4.jpg" class="rounded-lg" alt="" />
     </div>
   </section>
 
