--- a/oskar/challenge1.html
+++ b/oskar/challenge1.html
@@ -25,7 +25,7 @@
       </a>
 
       <span class="text-lg flex text-left" style="font-size: 1rem;">
-        &nbsp; Vienna
+        &nbsp; AI
       </span>
     </span>
 
@@ -295,10 +295,10 @@
     <div
       class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
       <a href="#" class="block mr-4 w-full md:w-1/4" style="text-decoration: none; color: black; text-align: center">
-        <img src="./img/logo2.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
-        <br />
+        <img src="./img/logo2.png" class="h-8 sm:h-8 rounded-full" alt="logo"
+          style="display: inline-block; vertical-align: middle" />
         <span class="" style="font-size: 1.35rem;">
-          <span style="font-size: 1rem;">Vienna</span>
+          <span style="font-size: 1rem;">AI</span>
         </span>
       </a>
 
