--- a/oskar/index.html
+++ b/oskar/index.html
@@ -25,7 +25,7 @@
       </a>
 
       <span class="text-lg flex text-left" style="font-size: 1rem;">
-        &nbsp; Vienna
+        &nbsp; AI
       </span>
     </span>
 
@@ -201,11 +201,11 @@
   <footer id="about" class="font-serif bg-white py-8 px-4">
     <div
       class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
-      <a href="#" class="block mr-4 w-full md:w-1/4" style="text-decoration: none; color: black; text-align: center">
-        <img src="./img/logo2.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
-        <br />
-        <span class="" style="font-size: 1.35rem;">
-          <span style="font-size: 1rem;">Vienna</span>
+      <a href="#" class="block mr-4 w-full md:w-1/4" style="text-decoration: none; color: black; text-align: center;">
+        <img src="./img/logo2.png" class="h-8 sm:h-8 rounded-full" alt="logo"
+          style="display: inline-block; vertical-align: middle" />
+        <span style="font-size: 1.35rem;">
+          <span style="font-size: 1rem;">AI</span>
         </span>
       </a>
 
