updated Oskar's description

--- a/oskar/index.html
+++ b/oskar/index.html
@@ -184,10 +184,11 @@
     class="my-8 pt-8 font-serif container max-w-xl m-auto flex flex-col text-center lg:text-left sm:items-center">
     <h1 class="my-4 font-normal">Meet Oskar</h1>
     <p class="leading-normal mb-4 text-center font-sans" style="padding-left:5%; padding-right: 5%; font-size: 1.2em">
-      Oskar is the AI persona we are building using several open data sources and your answers. It always starts with
+      Oskar is our latest AI experiment which we hope will recommend the proper attire for the proper occasion. It
+      always starts with
       studying … in fact this is what
-      will make Oskar the expert we can rely on. I aim to include a conversational user experience where users like you
-      feel comfortable asking style advice from Oskar. <br> <br> Follow us on
+      will make Oskar the expert we can rely on. We aim to build a fun experience where users like you
+      feel comfortable asking style advice from Oskar. <br> <br> Follow
       <a class="inline-block no-underline text-grey-darkest" href="https://twitter.com/trendydots" target="_blank"><i
           class="fab fa-twitter"></i> @trendydots</a> to find out more about
       how
