--- a/oskar/index.html
+++ b/oskar/index.html
@@ -80,7 +80,7 @@
   <section id="challenges"
     class="my-8 px-4 font-serif container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
     style="margin-top:80px">
-    <div class="w-full lg:w-1/2" data-aos="fade-in">
+    <div class="w-full lg:w-1/2">
       <img src="./img/1.jpg" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
@@ -119,12 +119,12 @@
         helping a young student understand the basic concept of wearing the right shoe for the right occasion.
         <br />
       </p>
-      <a href="" style="text-decoration: none"
+      <a style="text-decoration: none"
         class="bg-transparent hover:bg-black text-grey-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
         Challenge coming soon
       </a>
     </div>
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-in">
       <img src="./img/2.jpg" class="rounded-lg" alt="" />
     </div>
   </section>
@@ -132,7 +132,7 @@
   <!-- Challenge 2 -->
   <section
     class="px-4 my-8 font-serif container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-in">
       <img src="./img/3.jpg" class="rounded-lg" alt="" />
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
@@ -147,7 +147,7 @@
         happy to give you the role of a teacher and thankful for supporting our very young AI student.
         <br />
       </p>
-      <a href="" style="text-decoration: none"
+      <a style="text-decoration: none"
         class="bg-transparent hover:bg-black text-grey-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
         Challenge coming soon
       </a>
@@ -169,12 +169,12 @@
         <br />
       </p>
 
-      <a href="#" style="text-decoration: none"
+      <a style="text-decoration: none"
         class="bg-transparent hover:bg-black text-grey-dark font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">
         Learn more soon
       </a>
     </div>
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-in">
       <img src="./img/4.jpg" class="rounded-lg" alt="" />
     </div>
   </section>
