--- a/oskar/index.html
+++ b/oskar/index.html
@@ -124,7 +124,7 @@
         Challenge coming soon
       </a>
     </div>
-    <div class="w-full lg:w-1/2" data-aos="fade-in">
+    <div class="w-full lg:w-1/2">
       <img src="./img/2.jpg" class="rounded-lg" alt="" />
     </div>
   </section>
