--- a/project.html
+++ b/project.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <title>Trendy Dots</title>
     <meta name="author" content="trendydots">
-    <meta name="description" content="Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative AI algorithms." />
+    <meta name="description"
+        content="Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative AI algorithms." />
     <meta name="keywords" content="digital lab, exploratory data analysis, behavioural economics, trend analysis" />
 
     <link rel="shortcut icon" href="logo.png">
@@ -379,7 +380,8 @@
             }
         }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Oswald|Lato|Roboto|Roboto+Condensed|Ubuntu"
+    <link
+        href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Oswald|Lato|Roboto|Roboto+Condensed|Ubuntu"
         rel="stylesheet" type="text/css">
 
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -435,19 +437,28 @@
                 platform is a meeting point for combining and correlating data from large public sources. With a strong
                 focus
                 on user experience, we produce reports that tell stories with data.
-                <!-- 
+
                 <br>
                 <br>
                 <br>
-                <a href="https://trendydots.com/datajournalism/" target="_blank" style="text-decoration: none; margin-left: 1px;">
-                    <img src="td-dj.png" style="height: 30px;
-                    border: 1px solid #212121;
-                    /* border-radius: 16px;
-                    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
-                    padding: 2px 0 1px 0;
-                    margin: 1px;">
-                </a>
-                -->
+                <a href="https://trendydots.com/invest/project" target="_blank"
+                    style="color:#000; text-decoration: none; border-bottom: 2px solid orange; font-weight: 500;">td.
+                    market
+                    research </a>
+                <br>
+                <br>
+                <a href="https://trendydots.com/oskar/" target="_blank"
+                    style="color:#000; text-decoration: none; border-bottom: 2px solid orange; font-weight: 500;">Oskar
+                    (a gentlemen's
+                    style AI
+                    experiment)</a>
+                <br>
+                <br>
+                <a href="https://trendydots.com/data4good/" target="_blank"
+                    style="color:#000; text-decoration: none; border-bottom: 2px solid orange; font-weight: 500;">data4good
+                    Vienna
+                    (webdevelopment)</a>
+
                 <!--
                 <a href="https://trendydots.com/invest/" target="_blank" style="text-decoration: none; margin-left: 30px;">
                     <img src="td-in.png" style="height: 28px;
@@ -461,12 +472,14 @@
             </p>
 
         </div>
+        <!-- 
         <div class="gwd-div-bd5p" id="twitter-wrapper_1">
             <a class="gwd-a-pekm" href="https://twitter.com/trendydots" target="_blank">
                 <img src="twitter_black.png" class="gwd-img-1b3r">
                 <p class="gwd-p-19l2">@trendydots</p>
             </a>
         </div>
+        -->
     </div>
     <div class="gwd-div-1ej3 gwd-div-4bf6" id="page2Summary">
         <div class="gwd-div-3afy" id="page1SummaryText_1">
@@ -479,10 +492,10 @@
     <div class="gwd-div-mx5a gwd-div-s0or" id="page3Text" style="height: 500px;">
         <div class="gwd-div-9729" style="top:0">
             <p class="gwd-p-6mvh">contact us</p>
-            
+
             <!-- contact form -->
-            <form id="signupform" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST"
-                class="gwd-form-11dq">
+            <form id="signupform" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf"
+                enctype="multipart/form-data" method="POST" class="gwd-form-11dq">
                 <div class="form-group input-group">
                     <label for="fullname"></label>
                     <input class="m-input" type="text" name="fullname" placeholder="Full Name" id="fullname">
@@ -494,8 +507,8 @@
                 </div>
                 <div class="form-group input-group">
                     <label for="clientMessage"></label>
-                    <input class="m-input" type="text" name="clientMessage" placeholder="Your message" id="clientMessage"
-                        required="">
+                    <input class="m-input" type="text" name="clientMessage" placeholder="Your message"
+                        id="clientMessage" required="">
                 </div>
                 <br>
 
@@ -503,10 +516,13 @@
                 <br>
 
                 <div class="form-group">
-                    <button type="submit" value="submit" style="font-weight: 800;color: #FBB82B; border: 1px solid #FBB82B; padding: 7px">Send Message</button>
-                    <br/> <br/>
+                    <button type="submit" value="submit"
+                        style="font-weight: 800;color: #FBB82B; border: 1px solid #FBB82B; padding: 7px">Send
+                        Message</button>
+                    <br /> <br />
                     <span style="font-size:12px">
-                    by submitting this information you agree to our <a href="./privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
+                        by submitting this information you agree to our <a href="./privacy-statement.html"
+                            target="_blank" style="color:#000">privacy statement</a>
                     </span>
                 </div>
             </form>
