--- a/project.html
+++ b/project.html
@@ -442,20 +442,20 @@
                 <br>
                 <br>
                 <a href="https://trendydots.com/invest/project" target="_blank"
-                    style="color:#000; text-decoration: none; border-bottom: 2px solid orange; font-weight: 500;">td.
+                    style="color:#000; text-decoration: none; border-bottom: 2px solid #fdd835; font-weight: 500;">td.
                     market
                     research </a>
                 <br>
                 <br>
                 <a href="https://trendydots.com/oskar/" target="_blank"
-                    style="color:#000; text-decoration: none; border-bottom: 2px solid orange; font-weight: 500;">Oskar
+                    style="color:#000; text-decoration: none; border-bottom: 2px solid #fdd835; font-weight: 500;">Oskar
                     (a gentlemen's
                     style AI
                     experiment)</a>
                 <br>
                 <br>
                 <a href="https://trendydots.com/data4good/" target="_blank"
-                    style="color:#000; text-decoration: none; border-bottom: 2px solid orange; font-weight: 500;">data4good
+                    style="color:#000; text-decoration: none; border-bottom: 2px solid #fdd835; font-weight: 500;">data4good
                     Vienna
                     (webdevelopment)</a>
 
