changed button style

--- a/project.html
+++ b/project.html
@@ -517,7 +517,7 @@
 
                 <div class="form-group">
                     <button type="submit" value="submit"
-                        style="font-weight: 800;color: #FBB82B; border: 1px solid #FBB82B; padding: 7px">Send
+                        style="font-weight: 800;color: #000; border: 3px solid #fdd835; padding: 7px">Send
                         Message</button>
                     <br /> <br />
                     <span style="font-size:12px">
