corrected WAW to Wirtschaftsagentur Wien

--- a/data4good/index.html
+++ b/data4good/index.html
@@ -123,7 +123,8 @@
     <br>
     <p> 3) We will present a summary of the Hackathon and results, with then a spotlight on the Smart
       Cities Project, at
-      the WAW: <a href="https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/"
+      the Wirtschaftsagentur Wien: <a
+        href="https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/"
         target="_blank">https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/</a> </p>
     <br>
   </section>
